# schaltwerk

./: .env.example  .gitignore  .opencode-session  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PRIVACY.md  README.md  codex-notify-hook-plan.md  eslint.config.js  fix_all_terminology.sh  fix_commander_and_terminology.sh  fix_draft_content_references.sh  fix_final_terminology.sh  fix_remaining_renames.sh  fix_remaining_test_issues.sh  fix_test_terminology.sh  fix_tokio_task.sh  index.html  justfile  kanban-removal-plan.md  mintlify.json  opencode-mcp-implementation-plan.md  opencode.json  package-lock.json  package.json  rename_terminology.sh  reset-switch-shortcuts-plan.md  revert_rust_spec_to_plan.sh  revert_spec_to_plan.sh  spec-selection-focus-plan.md  tailwind.config.js  temp-vitest-report.json  test-mcp-safety.md  test_api_performance.sh  test_session_rename.rs  tsconfig.json  vite.config.ts  (+1 more)
.cargo/: config.toml
.github/: dependabot.yml  pull_request_template.md
.para/: .gitignore
.qlty/: out  plugin_cachedir  qlty.toml  results
docs/: README.md  agent-setup.md  core-concepts.md  getting-started.md  index.md  keyboard-shortcuts.md  mcp-integration.md  using-schaltwerk.md
docs-site/: .gitignore  README.md  core-concepts.mdx  first-session.mdx  imprint.mdx  installation.mdx  introduction.mdx  mint.json  package-lock.json  package.json  privacy.mdx  workflow.mdx
eslint-rules/: no-empty-catch-handlers.js
homebrew/: README.md
mcp-server/: PROMPTING.md  (+9 more)
src-tauri/: Cargo.toml  Info.plist  agents_manifest.toml  clippy.toml  entitlements.plist  fix_task_to_agent_commands.sh  main.ts  tauri.conf.json  tauri.conf.json.backup  updater-public.pem
src-tauri/capabilities/: default.json
src-tauri/crates/pty_host/: Cargo.toml
src-tauri/crates/pty_host/src/: error.rs  host.rs  lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: binary_detection.rs  binary_detector.rs  cleanup.rs  cli.rs  dev_info.rs  diff_commands.rs  diff_engine.rs  events.rs  file_utils.rs  file_watcher.rs  lib.rs  logging.rs  macos_prefs.rs  main.rs  mcp_api.rs  open_apps.rs  permissions.rs  project_manager.rs  projects.rs  pty.rs  settings.rs  tauri_events.rs  terminal_benchmark.rs  updater.rs
src-tauri/src/api/mcp/: client.rs
src-tauri/src/commands/: agent_binaries.rs  agent_startup_benchmark.rs  analytics.rs  clipboard.rs  git.rs  github.rs  mcp.rs  mcp_config.rs  mod.rs  para_core.rs  project.rs  pty.rs  schaltwerk_core.rs  session_lookup_cache.rs  sessions_refresh.rs  settings.rs  terminal.rs  terminal_benchmark.rs  tests.rs  updater.rs  utility.rs
src-tauri/src/commands/schaltwerk_core/: agent_ctx.rs  agent_launcher.rs  events.rs  schaltwerk_core_cli.rs  terminals.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/domains/agents/: adapter.rs  amp.rs  claude.rs  codex.rs  codex_config.rs  codex_index.rs  codex_notify.rs  command_parser.rs  cursor.rs  droid.rs  gemini.rs  launch_spec.rs  manifest.rs  mod.rs  naming.rs  opencode.rs  output_parsing.rs  qwen.rs  unified.rs
src-tauri/src/domains/agents/tests/: command_parser_tests.rs  mod.rs
src-tauri/src/domains/analytics/: mod.rs
src-tauri/src/domains/git/: branches.rs  branches_benchmark.rs  db_git_stats.rs  github_cli.rs  history.rs  mod.rs  operations.rs  repository.rs  service.rs  stats.rs  stats_benchmark.rs  worktree_benchmark.rs  worktrees.rs
src-tauri/src/domains/merge/: lock.rs  mod.rs  service.rs  types.rs
src-tauri/src/domains/projects/: manager.rs  mod.rs  types.rs
src-tauri/src/domains/sessions/: activity.rs  cache.rs  db_sessions.rs  entity.rs  mod.rs  process_cleanup.rs  repository.rs  service.rs  sorting.rs  spec_loading_perf_test.rs  storage.rs  utils.rs
src-tauri/src/domains/settings/: mod.rs  service.rs  types.rs  validation.rs
src-tauri/src/domains/terminal/: ansi.rs  coalescing.rs  command_builder.rs  control_sequences.rs  idle_detection.rs  lifecycle.rs  local.rs  manager.rs  manager_test.rs  mod.rs  shell_invocation.rs  utf8_stream.rs  visible.rs
src-tauri/src/domains/workspace/: diff_commands.rs  diff_engine.rs  file_index.rs  file_utils.rs  mod.rs  watcher.rs
src-tauri/src/infrastructure/: mod.rs  pty.rs
src-tauri/src/infrastructure/config/: mod.rs  settings.rs
src-tauri/src/infrastructure/database/: connection.rs  db_app_config.rs  db_archived_specs.rs  db_project_config.rs  db_schema.rs  mod.rs
src-tauri/src/infrastructure/events/: mod.rs
src-tauri/src/infrastructure/logging/: mod.rs
src-tauri/src/mcp_api/: diff_api.rs
src-tauri/src/para_cli/: client.rs  mod.rs  monitor.rs  service.rs  tests.rs  types.rs
src-tauri/src/para_core/: activity.rs  claude.rs  codex.rs  cursor.rs  database.rs  db_app_config.rs  db_git_stats.rs  db_project_config.rs  db_schema.rs  db_sessions.rs  draft_fixed_test.rs  gemini.rs  git.rs  mcp.rs  mod.rs  naming.rs  opencode.rs  plan_fixed_test.rs  session.rs  session_cache.rs  session_core.rs  session_db.rs  session_original.rs  session_sorting.rs  session_utils.rs  tests.rs  types.rs
src-tauri/src/para_core/git/: branches.rs  operations.rs  repository.rs  stats.rs  worktrees.rs
src-tauri/src/schaltwerk_core/: activity.rs  claude.rs  database.rs  db_app_config.rs  db_archived_specs.rs  db_git_stats.rs  db_project_config.rs  db_schema.rs  db_sessions.rs  gemini.rs  git.rs  mod.rs  naming.rs  plan_fixed_test.rs  qwen.rs  session_benchmark.rs  session_cache.rs  session_core.rs  session_core_test.rs  session_db.rs  session_original.rs  session_sorting.rs  session_utils.rs  tests.rs  types.rs
src-tauri/src/schaltwerk_core/git/: branches.rs  branches_benchmark.rs  branches_test.rs  operations.rs  repository.rs  stats.rs  stats_benchmark.rs  stats_test.rs  worktree_benchmark.rs  worktree_test.rs  worktrees.rs
src-tauri/src/services/: mcp.rs  mod.rs  projects.rs  sessions.rs  terminals.rs
src-tauri/src/shared/: binary_utils.rs  cli.rs  mod.rs  permissions.rs  terminal_id.rs  types.rs
src-tauri/src/terminal/: ansi.rs  coalescing.rs  local.rs  manager.rs  manager_test.rs  mod.rs
src-tauri/src/utils/: binary_utils.rs  mod.rs
(+596 files in other folders)
