[package]
name = "pty_host"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
portable-pty = "0.9"
base64 = "0.22"
bytes = "1"
thiserror = "1"
parking_lot = "0.12"
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
libc = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time"] }
tempfile = "3"
